--- a/public/styles.css
+++ b/public/styles.css
@@ -4,12 +4,20 @@
 }
 
 :root {
+  --normal-text-colour: #4c799e;
+  --hovered-text-colour: #1c41ba;
+  --colour-white: #edecd3;
 }
 
 body {
+  background-color: black;
   font-family: "PressStart";
   margin: 0px;
   box-sizing: border-box;
+}
+
+a {
+  text-decoration: none;
 }
 
 button {
@@ -34,13 +42,14 @@ h2 {
 }
 
 header {
+  color: var(--colour-white);
   margin-bottom: 24px;
 }
 
 .player-img {
   width: 128px;
   height: 128px;
-  border: 1px solid black;
+  border: 1px solid #1c649c;
 
   margin-bottom: 4px;
 }
@@ -58,54 +67,84 @@ header {
   gap: 8px;
   flex-direction: column;
   align-items: center;
-  border: 1px solid red;
 }
 
 nav {
   flex-grow: 1;
 }
 
-.nav-bar button {
-  color: #4c799e;
+.nav-bar a {
+  color: var(--normal-text-colour);
 }
 
-.nav-bar button::before {
+.nav-bar a::before {
   content: "[";
 }
 
-.nav-bar button::after {
+.nav-bar a::after {
   content: "]";
 }
 
-
-.nav-bar > li.selected > button,
-.nav-bar button:hover {
-  color: #1c41ba;
-}
-
-.nav-bar > li.selected > button::before,
-.nav-bar button:hover::before {
-  content: "[ ";
-}
-
-.nav-bar > li.selected > button::after,
-.nav-bar button:hover::after {
-  content: " ]";
+.nav-bar > li.selected > a,
+.nav-bar a:hover {
+  color: var(--hovered-text-colour);
 }
 
 .nav-bar {
+  max-width: 300px;
   display: flex;
   flex-direction: column;
   gap: 6px;
+}
+
+.player-username {
+  color: var(--normal-text-colour);
+}
+
+.player-username:hover {
+  color: var(--hovered-text-colour);
+}
+
+.player-listing-wrapper,
+.player-summary-wrapper {
+  flex-grow: 5;
+}
+
+.player-summary-wrapper {
+  display: flex;
+  flex-direction: column;
 }
 
 .display-content-grid {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   border: 1px solid black;
-  flex-grow: 5;
+  gap: 16px;
+}
+
+.player-details-wrapper {
+  margin-bottom: 24px;
 }
 
 main {
   display: flex;
+}
+
+.section-title {
+  font-size: 20px;
+  color: #d6d142;
+  margin: 0px;
+  margin-bottom: 16px;
+}
+
+.label-values-wrapper {
+  display: flex;
+  gap: 4rem;
+}
+
+.listings {
+  color: var(--colour-white);
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
 }
