--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
 <html lang="en-US">
   <head>
     <title>Inventory Application</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="/styles.css" />
   </head>
 
   <body>
@@ -13,33 +13,79 @@
     <main>
       <nav>
         <ul class="nav-bar">
-          <li class="selected"><button>Players</button></li>
-          <li><button>All Items</button></li>
-          <li><button>Food</button></li>
-          <li><button>Potion</button></li>
-          <li><button>Weapon</button></li>
+          <li class="selected"><a href="/">Players</a></li>
+          <li><a href="#">All Items</a></li>
+          <li><a href="#">Food</a></li>
+          <li><a href="#">Potion</a></li>
+          <li><a href="#">Weapon</a></li>
         </ul>
       </nav>
-      <ul class="display-content-grid">
       <% if (locals.players) { %>
-        <% players.forEach(player => { %>
-          <li class="player-card-as-li">
-            <!-- TODO: actual pixel art player image -->
-            <div class="player-img">
-            </div>
-            <h2>
-              <%= player.username %>
-            <h2>
-            <div class="player-level">
-              Lvl <%= player.level %>
-            </div>
-            <div class="player-exp">
-              Exp <%= player.experience %> / <%= player.maxExperience %>
-            </div>
-          </li>
-        <% }); %>
-      <% } %>
-      </ul>
+        <section class="player-listing-wrapper">
+          <h1 class="section-title">&lt; Players &gt;</h1>
+          <ul class="display-content-grid">
+          <% players.forEach(player => { %>
+            <li class="player-card-as-li">
+              <!-- TODO: actual pixel art player image -->
+              <div class="player-img">
+              </div>
+              <h2>
+                <a class="player-username" href="<%= player.id %>/inventory"><%= player.username %></a>
+              <h2>
+              <div class="player-level">
+                Lvl <%= player.level %>
+              </div>
+              <div class="player-exp">
+                Exp <%= player.experience %> / <%= player.maxExperience %>
+              </div>
+            </li>
+          <% }); %>
+          </ul>
+        </section>
+        <% } else if (locals.playerItems && locals.player) { %>
+          <section class="player-summary-wrapper">
+            <section class="player-details-wrapper">
+              <h1 class="section-title">&lt; Player &gt;</h1>
+              <div class="player-img"></div>
+              <section class="label-values-wrapper">
+                <ul class="listings">
+                  <li>Name:</li>
+                  <li>Lvl:</li>
+                  <li>Exp:</li>
+                </ul>
+                <ul class="listings">
+                  <li><%= player.username %></li>
+                  <li><%= player.level %></li>
+                  <li><%= player.experience %>/<%= player.maxExperience %></li>
+                </ul>
+              </section>
+            </section>
+
+            <section class="inventory-listing-wrapper">
+              <h1 class="section-title">&lt; Inventory &gt;</h1>
+              <section class="label-values-wrapper">
+                <ul class="listings">
+                <% playerItems.forEach(item => { %>
+                  <li>
+                    <h2>
+                      x<%= item.quantity %>
+                    </h2>
+                  </li>
+                <% }); %> 
+                </ul>
+                <ul class="listings">
+                  <% playerItems.forEach(item => { %>
+                    <li>
+                      <h2>
+                        <%= item.name %>
+                      </h2>
+                    </li>
+                  <% }); %>
+                </ul>
+              </section>
+            </section>
+          </section>
+        <% } %>
     </main>
   </body>
 </html>
